Simplified collector to list